--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -10,9 +10,10 @@ body {
     place-self: center;
     font-family: system-ui;
     margin-left: 40vw;
+    padding: 7px;
 }
 
-.login-inputs {
+.signup-inputs {
     margin-top: 20vh;
     height: 350px;
     width: 350px;
@@ -24,10 +25,10 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-top: 5px;
 
 }
-
-.login-btn {
+.signup-btn {
     border-radius: 2px;
     background-color: #11c0d7;
     color: #eff1f3;
@@ -41,18 +42,22 @@ body {
 }
 
 .username-input {
-    color: whitesmoke;
+    color: rgb(202, 6, 6);
+    padding: 1vw 1vw;
+    /* padding-top: 1vw; */
 }
 
-.demo-btn {
-    border-radius: 2px;
-    background-color: #11d732;
-    color: #eff1f3;
-    margin-top: 18px;
-    width: 100px;
-    height: 30px;
-    box-shadow: 0 0 2px rgb(179, 170, 49);
-    cursor: pointer;
-    font-weight: 700;
-
+.password-in {
+    color: rgb(202, 6, 6);
+    padding: 1vw 1vw;
+    /* padding-top: 1vw; */
 }
+
+.email-in {
+    color: rgb(202, 6, 6);
+    padding: 1vw;
+    /* padding-top: 1vw; */
+}
+
+
+
