--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -1,8 +1,8 @@
-body {
-    background-color: wheat;
+.loginFormPage {
+    /* background-color: thistle; */
     display: flex;
-    grid-column-start: 3;
-    grid-column-end: 5;
+    grid-column-start: 2;
+    grid-column-end: 4;
     grid-row-start: 3;
     grid-row-end: 3;
     flex-direction: column;
@@ -14,17 +14,17 @@ body {
 
 .login-inputs {
     margin-top: 20vh;
+    margin-right: 120px;
     height: 350px;
     width: 350px;
     box-sizing: border-box;
     border: 1px solid #DF553D;
-    background-color: #bca0e4;
+    background-color: #b38a1acb;
     color: #eff1f3;
-    display: flex;
+    display: grid;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
 }
 
 .login-btn {
@@ -37,6 +37,7 @@ body {
     box-shadow: 0 0 2px black;
     cursor: pointer;
     font-weight: 700;
+    position: center;
 
 }
 
@@ -52,7 +53,7 @@ body {
     width: 100px;
     height: 30px;
     box-shadow: 0 0 2px rgb(179, 170, 49);
-    cursor: pointer;
+    cursor: progress;
     font-weight: 700;
 
 }
