--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -25,9 +25,9 @@ div#signupFormPage {
     height: 300px;
     width: 350px;
     box-sizing: border-box;
-    border: 1px solid #DF553D;
-    background-color: #b38a1acb;
-    color: #eff1f3;
+    border: 1px solid #891277;
+    background-color: #F0E9DC;
+    color: #fffcf2;
     display: grid;
     flex-direction: column;
     justify-content: center;
@@ -37,12 +37,13 @@ div#signupFormPage {
 
 .signup-btn {
     border-radius: 2px;
-    background-color: #11c0d7;
-    color: #eff1f3;
+    background-color: #891277;
+
+    color: #fffcf2;
     margin-top: 5px;
     width: 100px;
     height: 30px;
-    box-shadow: 0 0 4px rgb(167, 129, 74);
+    box-shadow: 0 0 4 px #891277;
     cursor: progress;
     font-weight: 700;
     margin-left: 75px;
@@ -50,14 +51,14 @@ div#signupFormPage {
 }
 
 .username-input {
-    color: rgb(202, 6, 6);
+    color: #891277;
     padding: 2px;
     justify-content: space-around;
     padding-top: 1vw;
 }
 
 .password-in {
-    color: rgb(202, 6, 6);
+    color: #891277;
     padding: 2px;
     padding-top: 1vw;
 }
@@ -67,13 +68,13 @@ div#signupFormPage {
 }
 
 .cfm-password-in {
-    color: rgb(202, 6, 6);
+    color: #891277;
     padding: 2px;
     padding-top: 1vw;
 }
 
 .email-in {
-    color: rgb(202, 6, 6);
+    color: #891277;
     /* padding: 1vw; */
     /* padding-top: 1vw; */
 }
