got create event to work, save to database

--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -75,3 +75,7 @@ div.username-container {
     /* margin-left: 83px; */
     justify-self: center;
 }
+
+.the-errors{
+    color: rgb(231, 18, 18);
+}
