got things working on create event, but cannot get single or splash screen

--- a/frontend/src/components/EventCreateFormPage/EventCreateForm.css
+++ b/frontend/src/components/EventCreateFormPage/EventCreateForm.css
@@ -2,8 +2,8 @@ h2.event-form-title {
     display: flex;
     align-items: center;
     justify-items: center;
-    margin-left: 45vw;
-    color: #225452;
+    margin-left: 42vw;
+    color: #F0E9DC;
 }
 
 div.event-form-inputs {
