--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -26,7 +26,8 @@ div#signupFormPage {
     width: 350px;
     box-sizing: border-box;
     border: 1px solid #891277;
-    background-color: #F0E9DC;
+    background-color: #fffcf25a;
+
     color: #fffcf2;
     display: grid;
     flex-direction: column;
@@ -76,14 +77,9 @@ div#signupFormPage {
 }
 
 
-
 .cfm-password-in {
     color: #891277;
     padding: 2px;
     /* padding-top: 1vw; */
 }
-
-
-
-
 
