--- a/frontend/src/components/EventCreateFormPage/EventCreateForm.css
+++ b/frontend/src/components/EventCreateFormPage/EventCreateForm.css
@@ -15,16 +15,20 @@ div.event-form-inputs {
     margin-left: 40vw;
 
 
-} 
+}
+input {
+    background-color: #fffcf25a;
+}
 
-div.event-form-contents{
+div.event-form-contents {
     margin-top: 8vh;
     margin-left: 35vw;
     height: 500px;
     width: 350px;
     box-sizing: border-box;
     border: 1px solid #891277;
-    background-color: #F0E9DC;
+    background-color: #fffcf25a;
+
     color: #891277;
     display: grid;
     flex-direction: column;
