--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -17,6 +17,10 @@ div#loginFormPage {
     margin-left: 40vw;
 }
 
+input {
+    background-color: #fffcf25a;
+}
+
 .login-inputs {
     margin-top: 20vh;
     margin-right: 120px;
@@ -24,7 +28,8 @@ div#loginFormPage {
     width: 350px;
     box-sizing: border-box;
     border: 1px solid #891277;
-    background-color: #F0E9DC;
+    background-color: #fffcf25a;
+
     color: #fffcf2;
     display: grid;
     flex-direction: column;
@@ -39,19 +44,18 @@ div#loginFormPage {
     margin-top: 18px;
     width: 100px;
     height: 30px;
-    box-shadow: 0 0 2px FFFCF2;
+    box-shadow: 0 0 2px #fffcf25a;
     cursor: progress;
     font-weight: 700;
     /* margin-left: 60px; */
     justify-self: center;
-    
 
 
 }
 
 div.username-container {
     margin-top: 4vh;
-    
+
 }
 
 .username-input {
@@ -76,6 +80,6 @@ div.username-container {
     justify-self: center;
 }
 
-.the-errors{
+.the-errors {
     color: rgb(231, 18, 18);
 }
